--- a/assets/style.css
+++ b/assets/style.css
@@ -127,6 +127,7 @@
 .wpupostmetas-table-post-wrap {
     padding: 10px;
     max-height: 500px;
+    min-height: 10px;
     border: 1px solid #e0e0e0;
     overflow: auto;
     background-color: #f6f6f6;
@@ -179,8 +180,7 @@
 
 .multilingual-toolbox [data-i] {
     display: inline-block;
-    margin-right: 5px;
-    padding: 0 6px;
+    padding: 0 10px;
     vertical-align: middle;
     color: #999;
     -webkit-transition: all 0.3s ease;
@@ -193,6 +193,6 @@
     background-color: #f0f0f0;
 }
 
-.wpupostmetas-table--multilingual tr:not(.is-visible) {
+.wpupostmetas-table--multilingual > tbody > tr:not(.is-visible) {
     display: none;
 }
